modifications des textes en durs

--- a/src/Hph/View/front/cashless.html.twig
+++ b/src/Hph/View/front/cashless.html.twig
@@ -18,8 +18,8 @@
                    data-iframe-width="100%" data-iframe-background="transparent" id="nemolink">Accéder à mon compte</a>
                 <script type="text/javascript" src="https://static.nemopay.net/nemoframe.min.js"></script>
 
-                <h2 class="text-center">DES QUESTIONS SUR LE CASHLESS ?</h2>
-                <div class="text-center">
+                <h2 class="text-center">DES QUESTIONS SUR LE CASHLESS ?</h2><br>
+                <div class="text-center orange">
                     <p>Pour sa seconde édition Hop Pop Hop poursuit le paiement dématérialisé : le « cashless ».
                         Terminé les paquets de jetons qui dépassent de la poche, tout votre argent pour le bar et la
                         restauration se trouve désormais sur une carte (semblable à une carte bancaire) que vous pouvez
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="activites">
-                    <h3 class="text-center">Comment récupérer ma carte ?</h3>
+                    <h3 class="text-center orange">Comment récupérer ma carte ?</h3><br>
                     <p>Si vous avez pré-chargé votre carte, celle-ci vous sera remise à l’entrée du festival lors du
                         contrôle de votre billet.
                         Si vous n’avez pas pré-chargé votre carte, rendez vous à un « guichet cashless ». Une carte vous
@@ -39,45 +39,52 @@
                     </p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center">Est-ce que je peux utiliser cette carte sur tout l’événement ? </h3>
+                    <h3 class="text-center orange">Est-ce que je peux utiliser cette carte sur tout l’événement ? </h3>
+                    <br>
                     <p>Cette carte sera le seul moyen de paiement accepté sur la totalité du site pour vos boissons.
                         Vous pourrez payer la nourriture dans les foodtrucks en cashless, espèces et en CB.</p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center">Comment recharger mon compte ? </h3>
+                    <h3 class="text-center orange">Comment recharger mon compte ? </h3><br>
                     <p> Avant le festival, vous pouvez recharger en ligne en vous créant un compte sur le site internet
                         du festival.<br>
                         Pendant l’évènement vous pouvez recharger votre carte de deux façons :<br>
-                        – avec votre smartphone sur le site internet du festival.<br>
-                        – aux « guichets cashless » présents sur le site. <br>
-                        Vous pouvez recharger votre compte autant de fois que vous le souhaitez, avant et pendant
-                        l’événement.</p>
+                    <ul>
+                        <li>avec votre smartphone sur le site internet du festival.</li>
+                        <li>aux « guichets cashless » présents sur le site.</li>
+                    </ul>
+                    Vous pouvez recharger votre compte autant de fois que vous le souhaitez, avant et pendant
+                    l’événement.</p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center">Que se passe-t-il si ma carte est volée ou perdue ? </h3>
+                    <h3 class="text-center orange">Que se passe-t-il si ma carte est volée ou perdue ? </h3><br>
                     <p>Si vous avez créé un compte sur le site Internet du festival, vous pourrez demander le blocage de
                         votre carte en vous rendant à un « guichet cashless ».
-                        Vous pouvez créer un compte :<br>
-                        – soit avant de vous rendre à l’événement en saisissant le numéro de votre billet : vous
-                        récupérez votre carte à l’entrée du festival.<br>
-                        – soit après avoir récupéré une carte à un « guichet cashless » en saisissant le numéro de la
-                        carte.<br>
+                        Vous pouvez créer un compte :
+                    <ul>
+                        <li>soit avant de vous rendre à l’événement en saisissant le numéro de votre billet : vous
+                            récupérez votre carte à l’entrée du festival.</li>
+                        <li>soit après avoir récupéré une carte à un « guichet cashless » en saisissant le numéro de la
+                            carte.</li>
+                    </ul>
                         Cette opération d’indentification est nécessaire pour permettre le blocage de votre carte. Si
                         vous n’avez pas créé de compte et associé votre carte, le blocage sera impossible.<br>
                         Votre carte est comme votre portefeuille : si vous la perdez, l’argent stocké dessus sera
                         également perdu.</p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center">Pourquoi créer un compte ? </h3>
-                    <p>En créant un compte, vous pourrez :<br>
-                        – consulter le solde de votre carte et l’historique des transactions<br>
-                        – enregistrer votre Carte Bancaire pour un rechargement plus rapide<br>
-                        – bloquer votre carte et en obtenir une nouvelle en cas de perte ou de vol<br>
-                        – recharger avant l’évènement via le site internet ou l’application<br>
-                        – obtenir le remboursement de votre solde à l’issue de l’événement</p>
+                    <h3 class="text-center orange">Pourquoi créer un compte ? </h3><br>
+                    <p>En créant un compte, vous pourrez :</p>
+                    <ul>
+                        <li>consulter le solde de votre carte et l’historique des transactions</li>
+                        <li>enregistrer votre Carte Bancaire pour un rechargement plus rapide</li>
+                        <li>bloquer votre carte et en obtenir une nouvelle en cas de perte ou de vol</li>
+                        <li>recharger avant l’évènement via le site internet ou l’application</li>
+                        <li>obtenir le remboursement de votre solde à l’issue de l’événement</li>
+                    <ul>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center">Que se passe-t-il avec mon argent après l’événement ? </h3>
+                    <h3 class="text-center orange">Que se passe-t-il avec mon argent après l’événement ? </h3><br>
                     <p>Il est possible de récupérer l’argent restant sur votre carte après l’événement si le solde de
                         celle-ci est supérieur à 0,5€. Pour cela, connectez-vous à votre compte et vérifiez que votre
                         solde apparait bien. Vous pourrez alors faire une demande de remboursement et saisir la CB sur
@@ -91,33 +98,33 @@
                         Les remboursement seront accessibles à partir du 17 Septembre jusqu’au 02 Octobre 2017</p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center">La création d’un compte est-elle obligatoire ? </h3>
+                    <h3 class="text-center orange">La création d’un compte est-elle obligatoire ? </h3><br>
                     <p>Non, vous pouvez recharger votre carte directement aux « guichets cashless ». Votre carte reste
                         alors totalement anonyme. Attention : dans ce cas, votre carte ne pourra pas être bloquée en cas
                         de perte ou de vol. </p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center">Est-il possible d’utiliser la carte d’un autre événement ?</h3>
+                    <h3 class="text-center orange">Est-il possible d’utiliser la carte d’un autre événement ?</h3><br>
                     <p> Non, il est impossible d’utiliser une autre carte que celle fournie durant le festival.
                     </p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center">La carte est-elle payante ?</h3>
+                    <h3 class="text-center orange">La carte est-elle payante ?</h3><br>
                     <p> Non, cette carte est complètement gratuite.</p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center"> Comment connaître le solde de ma carte ?</h3>
+                    <h3 class="text-center orange"> Comment connaître le solde de ma carte ?</h3><br>
                     <p> Si vous avez créé un compte, vous pourrez consulter votre solde sur le site Internet du
                         festival. Vous pouvez également demander votre solde à un « guichet cashless ».
                     </p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center">Ai-je accès à un récapitulatif de mes transactions ?</h3>
+                    <h3 class="text-center orange">Ai-je accès à un récapitulatif de mes transactions ?</h3><br>
                     <p>Oui, vous pouvez accéder au récapitulatif de vos transactions via votre compte sur le site
                         Internet du festival. </p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center">Comment prendre soin de ma carte ?</h3>
+                    <h3 class="text-center orange">Comment prendre soin de ma carte ?</h3><br>
                     <p>Votre carte est équipée d’une puce électronique dans laquelle est stocké votre argent. Prenez-en
                         soin
                         pour éviter les désagréments ! Évitez toute exposition à la chaleur ou à une flamme et ne tentez
