--- a/src/Hph/View/front/place.html.twig
+++ b/src/Hph/View/front/place.html.twig
@@ -38,8 +38,8 @@
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <hr class="hr">
-                <h2 class="white font-circula">Carte</h2>
+                <hr class="hr-min">
+                <h2 class="white font-circula">Carte</h2><br>
                 <iframe src="https://www.google.com/maps/d/embed?mid=1mGMqNYvqQ9GoBDmQ8iGEKu7xvYQ" width="100%"
                         height="750px" class="hidden-xs"></iframe>
                 <iframe src="https://www.google.com/maps/d/embed?mid=1mGMqNYvqQ9GoBDmQ8iGEKu7xvYQ" width="100%"
