--- a/src/Hph/View/front/transport.html.twig
+++ b/src/Hph/View/front/transport.html.twig
@@ -17,7 +17,7 @@
                 <br/>Plus d'infos : <a href="http://www.reseau-tao.fr/" class="turquoise bold">TAO</a>
             </p>
             <hr class="hr">
-            <i class="fa fa-bicycle" aria-hidden="true"></i>
+            <i class="fa fa-bicycle venir-icon" aria-hidden="true"></i>
             <h2>EN VELO</h2>
             <p>Des stationnements vélo se trouvent à proximité du jardin de l’Evêché, du
                 108 et de la Scène nationale.<br> Plusieurs bornes Vélo + sont aussi à proximité des lieux du festival.
