--- a/src/Hph/View/front/volunteer.html.twig
+++ b/src/Hph/View/front/volunteer.html.twig
@@ -24,8 +24,7 @@
 
                 <h2 class="font-circula titre2">Les grandes activités auxquelles vous pouvez participer :</h2>
                 <div class="activites">
-                    <span class="titre text-center">Avant le festival</span>
-
+                    <h3><span class="titre">Avant le festival</span></h3><br>
                     <p><strong>WORKSHOP SCÉNOGRAPHIE</strong> : Si tu es doué de tes dix doigts, viens réaliser avec
                         nous les derniers
                         éléments de déco qui embelliront le site. Les ateliers auront lieu en soirée, à l'Astrolabe, une
@@ -48,7 +47,7 @@
                     </ul>
                 </div>
                 <div class="activites">
-                    <span class="titre text-center">Pendant le festival</span>
+                    <h3><span class="titre">Pendant le festival</span></h3><br>
                     <p>Il est important d’être disponible les deux jours du festival</p>
                     <ul>
                         <li>Bar : vous servez les clients, vous vous occupez des stocks boissons, des stocks gobelets
@@ -76,12 +75,13 @@
                         <li>Relations Presse : vous êtes en charge des artistes lors des interview (les guider vers
                             l'espace presse, gérer leur intervention en lien avec l’attaché de presse)
                         </li>
-                        <li>Réseaux sociaux : vous alimentez les réseaux sociaux du festival sur les 2 jours (photos, vidéo, gif, etc...) En lien avec le chargé de communication et l’équipe vidéo / photos.
+                        <li>Réseaux sociaux : vous alimentez les réseaux sociaux du festival sur les 2 jours (photos,
+                            vidéo, gif, etc...) En lien avec le chargé de communication et l’équipe vidéo / photos.
                         </li>
                     </ul>
                 </div>
                 <div class="activites">
-                    <span class="titre text-center">Après le Festival</span>
+                    <h3><span class="titre">Après le Festival</span></h3><br>
                     <p>Démontage du site : à partir du dimanche après-midi jusqu'au mercredi 20 septembre.</p>
                 </div>
                 <hr class="hr">
