--- a/src/Hph/View/front/place.html.twig
+++ b/src/Hph/View/front/place.html.twig
@@ -5,8 +5,10 @@
     <div class="container text-center">
         <div class="row">
             <h2 class="white font-circula">Lieux du Festival</h2>
-            <p class="text-center">Les pass du festival vous donnent accès aux 6 lieux du festival et à tous les
+            <div class="text-center">
+            <p>Les pass du festival vous donnent accès aux 6 lieux du festival et à tous les
                 concerts </p>
+            </div>
             {% for place in places %}
                 {% if place.showcase == 0 %}
                     <div class="col-xs-6 col-sm-4">
