--- a/src/Hph/View/front/place.html.twig
+++ b/src/Hph/View/front/place.html.twig
@@ -5,8 +5,10 @@
     <div class="container text-center">
         <div class="row">
             <h2 class="white font-circula">Lieux du Festival</h2>
-            <p class="text-center">Les pass du festival vous donnent accès aux 6 lieux du festival et à tous les
+            <div class="text-center">
+            <p>Les pass du festival vous donnent accès aux 6 lieux du festival et à tous les
                 concerts </p>
+            </div>
             {% for place in places %}
                 {% if place.showcase == 0 %}
                     <div class="col-xs-6 col-sm-4">
@@ -38,8 +40,8 @@
         </div>
         <div class="row">
             <div class="col-xs-12">
-                <hr class="hr">
-                <h2 class="white font-circula">Carte</h2>
+                <hr class="hr-min">
+                <h2 class="white font-circula">Carte</h2><br>
                 <iframe src="https://www.google.com/maps/d/embed?mid=1mGMqNYvqQ9GoBDmQ8iGEKu7xvYQ" width="100%"
                         height="750px" class="hidden-xs"></iframe>
                 <iframe src="https://www.google.com/maps/d/embed?mid=1mGMqNYvqQ9GoBDmQ8iGEKu7xvYQ" width="100%"
