modifications de mises en page sur la page Lieux et cashless

--- a/src/Hph/View/front/cashless.html.twig
+++ b/src/Hph/View/front/cashless.html.twig
@@ -19,7 +19,7 @@
                 <script type="text/javascript" src="https://static.nemopay.net/nemoframe.min.js"></script>
 
                 <h2 class="text-center">DES QUESTIONS SUR LE CASHLESS ?</h2><br>
-                <div class="text-center orange">
+                <div class="text-center">
                     <p>Pour sa seconde édition Hop Pop Hop poursuit le paiement dématérialisé : le « cashless ».
                         Terminé les paquets de jetons qui dépassent de la poche, tout votre argent pour le bar et la
                         restauration se trouve désormais sur une carte (semblable à une carte bancaire) que vous pouvez
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="activites">
-                    <h3 class="text-center orange">Comment récupérer ma carte ?</h3><br>
+                    <h2 class="text-center orange">Comment récupérer ma carte ?</h2><br>
                     <p>Si vous avez pré-chargé votre carte, celle-ci vous sera remise à l’entrée du festival lors du
                         contrôle de votre billet.
                         Si vous n’avez pas pré-chargé votre carte, rendez vous à un « guichet cashless ». Une carte vous
@@ -39,13 +39,13 @@
                     </p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center orange">Est-ce que je peux utiliser cette carte sur tout l’événement ? </h3>
+                    <h2 class="text-center orange">Est-ce que je peux utiliser cette carte sur tout l’événement ? </h2>
                     <br>
                     <p>Cette carte sera le seul moyen de paiement accepté sur la totalité du site pour vos boissons.
                         Vous pourrez payer la nourriture dans les foodtrucks en cashless, espèces et en CB.</p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center orange">Comment recharger mon compte ? </h3><br>
+                    <h2 class="text-center orange">Comment recharger mon compte ? </h2><br>
                     <p> Avant le festival, vous pouvez recharger en ligne en vous créant un compte sur le site internet
                         du festival.<br>
                         Pendant l’évènement vous pouvez recharger votre carte de deux façons :<br>
@@ -57,7 +57,7 @@
                     l’événement.</p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center orange">Que se passe-t-il si ma carte est volée ou perdue ? </h3><br>
+                    <h2 class="text-center orange">Que se passe-t-il si ma carte est volée ou perdue ? </h2><br>
                     <p>Si vous avez créé un compte sur le site Internet du festival, vous pourrez demander le blocage de
                         votre carte en vous rendant à un « guichet cashless ».
                         Vous pouvez créer un compte :
@@ -73,7 +73,7 @@
                         également perdu.</p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center orange">Pourquoi créer un compte ? </h3><br>
+                    <h2 class="text-center orange">Pourquoi créer un compte ? </h2><br>
                     <p>En créant un compte, vous pourrez :</p>
                     <ul>
                         <li>consulter le solde de votre carte et l’historique des transactions</li>
@@ -84,7 +84,7 @@
                     <ul>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center orange">Que se passe-t-il avec mon argent après l’événement ? </h3><br>
+                    <h2 class="text-center orange">Que se passe-t-il avec mon argent après l’événement ? </h2><br>
                     <p>Il est possible de récupérer l’argent restant sur votre carte après l’événement si le solde de
                         celle-ci est supérieur à 0,5€. Pour cela, connectez-vous à votre compte et vérifiez que votre
                         solde apparait bien. Vous pourrez alors faire une demande de remboursement et saisir la CB sur
@@ -98,33 +98,33 @@
                         Les remboursement seront accessibles à partir du 17 Septembre jusqu’au 02 Octobre 2017</p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center orange">La création d’un compte est-elle obligatoire ? </h3><br>
+                    <h2 class="text-center orange">La création d’un compte est-elle obligatoire ? </h2><br>
                     <p>Non, vous pouvez recharger votre carte directement aux « guichets cashless ». Votre carte reste
                         alors totalement anonyme. Attention : dans ce cas, votre carte ne pourra pas être bloquée en cas
                         de perte ou de vol. </p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center orange">Est-il possible d’utiliser la carte d’un autre événement ?</h3><br>
+                    <h2 class="text-center orange">Est-il possible d’utiliser la carte d’un autre événement ?</h2><br>
                     <p> Non, il est impossible d’utiliser une autre carte que celle fournie durant le festival.
                     </p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center orange">La carte est-elle payante ?</h3><br>
+                    <h2 class="text-center orange">La carte est-elle payante ?</h2><br>
                     <p> Non, cette carte est complètement gratuite.</p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center orange"> Comment connaître le solde de ma carte ?</h3><br>
+                    <h2 class="text-center orange"> Comment connaître le solde de ma carte ?</h2><br>
                     <p> Si vous avez créé un compte, vous pourrez consulter votre solde sur le site Internet du
                         festival. Vous pouvez également demander votre solde à un « guichet cashless ».
                     </p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center orange">Ai-je accès à un récapitulatif de mes transactions ?</h3><br>
+                    <h2 class="text-center orange">Ai-je accès à un récapitulatif de mes transactions ?</h2><br>
                     <p>Oui, vous pouvez accéder au récapitulatif de vos transactions via votre compte sur le site
                         Internet du festival. </p>
                 </div>
                 <div class="activites">
-                    <h3 class="text-center orange">Comment prendre soin de ma carte ?</h3><br>
+                    <h2 class="text-center orange">Comment prendre soin de ma carte ?</h2><br>
                     <p>Votre carte est équipée d’une puce électronique dans laquelle est stocké votre argent. Prenez-en
                         soin
                         pour éviter les désagréments ! Évitez toute exposition à la chaleur ou à une flamme et ne tentez
