--- a/src/Hph/View/front/place.html.twig
+++ b/src/Hph/View/front/place.html.twig
@@ -6,8 +6,8 @@
         <div class="row">
             <h2 class="white font-circula">Lieux du Festival</h2>
             <div class="text-center">
-            <p>Les pass du festival vous donnent accès aux 6 lieux du festival et à tous les
-                concerts </p>
+            <span class="titre">Les pass du festival vous donnent accès aux 6 lieux du festival et à tous les
+                concerts </span>
             </div>
             {% for place in places %}
                 {% if place.showcase == 0 %}
