--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -46,19 +46,19 @@
                     </ul>
                 </li>
                 <!-- class active -->
-                <li><a href="../../../ticket">Billetterie</a></li>
+                <li><a href="../../../billeterie">Billetterie</a></li>
                 <li><a href="../../../cashless">Cashless</a></li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">La vie au festival <span class="caret"></span></a>
                     <ul class="dropdown-menu navbar-dropdown">
-                        <li><a href="../../../food">Animations</a></li>
-                        <li><a href="../../../place" id="placeLink">Lieux</a></li>
+                        <li><a href="../../../animations">Animations</a></li>
+                        <li><a href="../../../lieux" id="placeLink">Lieux</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Infos Pratiques <span class="caret"></span></a>
                     <ul class="dropdown-menu navbar-dropdown">
-                        <li><a href="../../../volunteer">Bénévolat</a></li>
+                        <li><a href="../../../benevolat">Bénévolat</a></li>
                         <li><a href="../../../transport">Comment venir</a></li>
                         <li><a href="../../../dimaorl">Dimanche à Orléans</a></li>
                     </ul>
