--- a/src/Hph/View/front/cashless.html.twig
+++ b/src/Hph/View/front/cashless.html.twig
@@ -19,7 +19,7 @@
                 <script type="text/javascript" src="https://static.nemopay.net/nemoframe.min.js"></script>
 
                 <h2 class="text-center">DES QUESTIONS SUR LE CASHLESS ?</h2><br>
-                <div class="text-center orange">
+                <div class="text-center">
                     <p>Pour sa seconde édition Hop Pop Hop poursuit le paiement dématérialisé : le « cashless ».
                         Terminé les paquets de jetons qui dépassent de la poche, tout votre argent pour le bar et la
                         restauration se trouve désormais sur une carte (semblable à une carte bancaire) que vous pouvez
