--- a/src/Hph/View/front/home.html.twig
+++ b/src/Hph/View/front/home.html.twig
@@ -35,7 +35,7 @@
                 <div class="container-fluid">
                     <div class="row ticket hidden-xs hidden-sm">
                         <div class="col-md-offset-2 col-md-8 hidden-xs hidden-sm col-ticket span-ticket">
-                            <a href="/ticket">
+                            <a href="/billetterie">
                                 <div class="panneau col-ticket">
                                     <span class="left-text font-bebas">RESERVEZ VOTRE</span>
                                     <span class="right-text font-bebas">PASS</span>
@@ -46,7 +46,7 @@
                     <div class="row visible-sm visible-xs">
                         <div class="col-md-12">
                             <h3 class="font-circula"><i class="fa fa-ticket" aria-hidden="true"></i> Pass 1 Journée ou 2 Jours disponibles</h3>
-                            <a href="/ticket" class="btn btn-default">Accéder à la Billetterie</a>
+                            <a href="/billetterie" class="btn btn-default">Accéder à la Billetterie</a>
                         </div>
                     </div>
                 </div>
