--- a/src/Hph/View/back/error.html.twig
+++ b/src/Hph/View/back/error.html.twig
@@ -3,7 +3,7 @@
 {% elseif error==3 %}
     <div class="alert alert-danger" role="alert">La taille du nom d'un lieu ne peut pas dépasser 30 caractères</div>
 {% elseif error==0 %}
-    <div class="alert alert-danger" role="alert">Une erreur s'est produite lors de l'insertion dans la base de données</div>
+    <div class="alert alert-danger" role="alert">Une erreur s'est produite</div>
 {% elseif error==4 %}
     <div class="alert alert-danger" role="alert">L'extension n'est pas valide</div>
 {% elseif error==5 %}
