--- a/src/Hph/View/front/planning.html.twig
+++ b/src/Hph/View/front/planning.html.twig
@@ -45,8 +45,8 @@
                     <div class="col-md-2 hidden-sm hidden-xs col-lieu bordercolor">
                         {% for heure,values in progLieu %}
                             <div class=" hidden-sm hidden-xs">
-                                <a href="/artiste/{{ values.artiste.slug }}">
-                                    <div class="planning-show show-blue font-bebas {% if values.showcase.status == 'canceled' %}planning-cancel{%endif%}"><p class="artist font-bebas">{{ values.artiste.name|upper }}<br/><span class="{% if values.showcase.status == 'canceled' %}cancel-hidden{% endif %} heure font-bebas">{{ heure }}</span></p>
+                                <a href="/artiste/{{ values.artist.slug }}">
+                                    <div class="planning-show show-blue font-bebas {% if values.showcase.status == 'canceled' %}planning-cancel{%endif%}"><p class="artist font-bebas">{{ values.artist.name|upper }}<br/><span class="{% if values.showcase.status == 'canceled' %}cancel-hidden{% endif %} heure font-bebas">{{ heure }}</span></p>
                                         {% if values.showcase.status == 'canceled' %}
                                             <p class="plan-cancel font-dokyo">Annulé</p>
                                         {% endif %}
