--- a/src/Hph/View/front/food.html.twig
+++ b/src/Hph/View/front/food.html.twig
@@ -1,5 +1,5 @@
 {% extends "base.html.twig" %}
-{% block title %}Se Nourrir{% endblock %}
+{% block title %}Animations{% endblock %}
 {% block titleMobile %}FOODTRUCK{% endblock %}
 {% block content %}
     <div class="container">
