--- a/src/Hph/View/front/volunteer.html.twig
+++ b/src/Hph/View/front/volunteer.html.twig
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="text-center">
-                <a href="/contact">
+                <a href="http://plugs.intrazik.com/registration/3718/7add3548ffd0040c01e38e8540d2efd2">
                     <button class="btn btn-primary contact-btn volunteer-btn">Devenez Bénévole</button>
                 </a>
             </div>
